test/visibility/only/nestedOnlysFunction.good
nestedOnlysFunction.chpl:21: In function 'main':
nestedOnlysFunction.chpl:22: error: unresolved call 'bar()'
